--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="about" id="about">
 				<div class="about-text">
 					<div class="avatar-box">
-						<img src="" alt="image">
+						<img src="images/avatar.png" alt="image">
 					</div>
 					<div class="info-box">
 						<h1 class="info-box__name"><span>Tôi là</span> <strong>Nguyễn Đình Khâm</strong><span class="hello">XIN CHÀO!</span></h1>
@@ -36,7 +36,7 @@
 							<tr><td><span>địa chỉ</span></td><td>Bùi Xương Trạch - Thanh Xuân - Hà Nội</td></tr>
 							<tr><td><span>email</span></td><td>dinhkhamhubt@gmail.com</td></tr>
 							<tr><td><span>điện thoại</span></td><td>0945118367</td></tr>
-							<tr><td colspan="2">Hiện tại, tôi đang học khoa CNTT tại ĐH Kinh Doanh và Công nghệ Hà Nội. Tính tình vui vẻ, hòa đồng, ham học hỏi. Sở thích đá bóng (giỏi nhất ở vị trí thủ môn), nghe nhạc. Kinh nghiệm từng học tại Zent Group từ tháng 10/2018 - 12/2018 về FrontEnd. Học HTML, CSS, Bootstrap 4 tại Vietpro Academny từ tháng 2/2019 và đang tiếp tục học Javascript, PHP-MySQL. Đọc hiểu tài liệu tiếng Anh mức cơ bản. <a target="_blank" title="Tải CV Ngay" href="https://drive.google.com/open?id=1nmN4CJZARYlJNwaLGMmATuTFcdk-mSUA" style="color:#00f; font-size: 20px;">Tải CV ngay</a></td></tr>
+							<tr><td colspan="2">Hiện tại, tôi đang học khoa CNTT tại ĐH Kinh Doanh và Công nghệ Hà Nội. Tính tình vui vẻ, hòa đồng, ham học hỏi. Sở thích đá bóng (giỏi nhất ở vị trí thủ môn), nghe nhạc. Kinh nghiệm từng học tại Zent Group từ tháng 10/2018 - 12/2018 về FrontEnd. Học HTML, CSS, Bootstrap 4 tại Vietpro Academy từ tháng 2/2019 và đang tiếp tục học Javascript, PHP-MySQL. Đọc hiểu tài liệu tiếng Anh mức cơ bản. <a target="_blank" title="Tải CV Ngay" href="https://drive.google.com/open?id=1nmN4CJZARYlJNwaLGMmATuTFcdk-mSUA" style="color:#00f; font-size: 20px;">Tải CV ngay</a></td></tr>
 						</table>
 					</div>
 				</div>
@@ -135,7 +135,7 @@
 					</div>
 					<div class="product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="bandienthoai/index.html" target="_blank" title="Click xem chi tiết"><img src="images/dienthoai.PNG" alt="Dinh Kham Shop"></a></div>
+							<div class="product__thumb"><a href="bandienthoai/index.html" target="_blank" title="Click xem chi tiết"><img src="images/fptshop1.png" alt="Dinh Kham Shop"></a></div>
 							<div class="product__text">
 								<h4 class="product__name"><a href="bandienthoai/index.html" target="_blank" title="Click xem chi tiết">FPT Shop</a></h4>
 								<p class="product_des">Web tương tự trang chủ FPT shop. Web có sử dụng Jquery, carousel, Responsive...Hoàn thành <strong>T3/2019</strong></p>
@@ -144,7 +144,7 @@
 					</div>
 					<div class="product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="banhang/index.html" target="_blank" title="Click xem chi tiết"><img src="images/dogiadung.png" alt="TN Edu"></a></div>
+							<div class="product__thumb"><a href="banhang/index.html" target="_blank" title="Click xem chi tiết"><img src="images/shopdogiadung1.png" alt="TN Edu"></a></div>
 							<div class="product__text">
 								<h4 class="product__name"><a href="banhang/index.html" target="_blank" title="Click xem chi tiết">Shop đồ gia dụng</a></h4>
 								<p class="product_des">Home của trang web bán đồ gia dụng. Sử dụng bootstrap 4, jquery, owl-carousel...Hoàn thành <strong>T3/2019</strong></p>
