--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>Kham</title>
 	<link rel="icon" href="images/icon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=vietnamese" rel="stylesheet">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fonts/css/all.min.css">
 	<link rel="stylesheet" href="libs/jquery.lineProgressbar.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -62,27 +63,51 @@
 				<div class="skill-inner">
 					<div class="skill-about">
 						<h4>HTML/HTML5</h4>
-						<div id="process_html"></div>
+						<div id="process_html">
+							<div class="progress">
+								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
+							</div>
+						</div>
 					</div>
 					<div class="skill-about">
 						<h4>CSS/CSS3</h4>
-						<div id="process_css"></div>
+						<div id="process_css">
+							<div class="progress">
+								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
+							</div>
+						</div>
 					</div>
 					<div class="skill-about">
 						<h4>Javascript/Jquery</h4>
-						<div id="process_js"></div>
+						<div id="process_js">
+							<div class="progress">
+								<div class="progress-bar" role="progressbar" style="width: 15%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">15%</div>
+							</div>
+						</div>
 					</div>
 					<div class="skill-about">
 						<h4>PHP & MySQL</h4>
-						<div id="process_php"></div>
+						<div id="process_php">
+							<div class="progress">
+								<div class="progress-bar" role="progressbar" style="width: 15%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">15%</div>
+							</div>
+						</div>
 					</div>
 					<div class="skill-about">
 						<h4>Photoshop</h4>
-						<div id="process_pts"></div>
+						<div id="process_pts">
+							<div class="progress">
+								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
+							</div>
+						</div>
 					</div>
 					<div class="skill-about">
 						<h4>Search Google</h4>
-						<div id="process_gg"></div>
+						<div id="process_gg">
+							<div class="progress">
+								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -162,7 +187,7 @@
 		<div class="container">
 			<p class="author">&copy; <strong>Nguyen Dinh Kham</strong> - <strong>2019</strong></p>
 		</div>
-		<a class="pulse" href="tel:0342582266">
+		<a class="pulse" href="tel:0945118367">
 			  <i class="fas fa-phone"></i>
 		</a>
 	</footer>
