--- a/bandienthoai/index.html
+++ b/bandienthoai/index.html
@@ -258,6 +258,21 @@
 	</div>
 	<!-- End footer -->
 	<script>
+		function myFunction() {
+			var x = document.getElementById("menu");
+			if (x.style.display === "block") {
+				x.style.display = "none";
+			} else {
+				x.style.display = "block";
+			}
+		}
+		 $(window).scroll(function () {
+        if ($(this).scrollTop() > 600) {
+            $('.scrollup').fadeIn('slow');
+        } else {
+            $('.scrollup').fadeOut('slow');
+        }
+    });
 		 $(window).scroll(function () {
         if ($(this).scrollTop() > 600) {
             $('.scrollup').fadeIn('slow');
