--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 						<div class="product">
 							<div class="product__thumb"><a href="project/index.html" target="_blank" title="Click xem chi tiết"><img src="images/shopdogiadung1.png" alt="TN Edu"></a></div>
 							<div class="product__text">
-								<h4 class="product__name"><a href="banhang/index.html" target="_blank" title="Click xem chi tiết">Pet Shop</a></h4>
+								<h4 class="product__name"><a href="project/index.html" target="_blank" title="Click xem chi tiết">Pet Shop</a></h4>
 								<p class="product_des">Giao diện trang web bán thức ăn cao cấp cho Pet. Sử dụng bootstrap 4,owl-carousel,responsive, jquery, ...Hoàn thành <strong>T3/2019</strong></p>
 							</div>
 						</div>
