--- a/project/index.html
+++ b/project/index.html
@@ -22,7 +22,7 @@
 					<span class="navbar-toggler-icon"></span>
 				</button> 
 				<div id="menu-resp" class="col-lg-9 col-md-8 col-sm-8">
-					<div class="search mt-3">
+					<div class="search mt-3 d-none d-md-block">
 						<form class="form-inline form-search ">
 							<input id="input-search" type="text" class="form-control input-sm" maxlength="64" placeholder="Nhập từ khóa để tìm kiếm" />
 							<button id="btn-search" onsubmit="btnSearch()" type="submit" class="btn"><i class="fas fa-search"></i></button>
@@ -501,7 +501,7 @@
 		<i class="fab fa-facebook"></i> Liên hệ facebook</a>
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/particles.js"></script>
+	<script src="js/haloween.js"></script>
 	<script>
 		/*Actions*/
 		$('.pro').mouseover(function(){
