--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	<header class="header">
 		<div class="container">
 			<ul class="main-menu text-center">
-				<li><a href="#about">thông tin</a></li>
-				<li><a href="#skill-box">kỹ năng</a></li>
-				<li><a href="#education-box">học vấn</a></li>
-				<li><a href="#product-box">sản phẩm</a></li>
+				<li><a href="#about">information</a></li>
+				<li><a href="#skill-box">skill</a></li>
+				<li><a href="#education-box">education</a></li>
+				<li><a href="#product-box">project</a></li>
 			</ul>
 			<div class="about" id="about">
 				<div class="about-text">
@@ -29,15 +29,15 @@
 						<img src="images/avatar.png" alt="image">
 					</div>
 					<div class="info-box">
-						<h1 class="info-box__name"><span>Tôi là</span> <strong>Nguyễn Đình Khâm</strong><span class="hello">XIN CHÀO!</span></h1>
+						<h1 class="info-box__name"><span>I am</span> <strong>Nguyen Dinh Kham</strong><span class="hello">HELLO!</span></h1>
 						<h4>Developer</h4>
 						<hr style="margin-top: 10px;">
 						<table class="infor-table">
-							<tr><td><span>tuổi</span></td><td>22</td></tr>
-							<tr><td><span>địa chỉ</span></td><td>Bùi Xương Trạch - Thanh Xuân - Hà Nội</td></tr>
+							<tr><td><span>Age</span></td><td>22</td></tr>
+							<tr><td><span>address</span></td><td>Bui Xuong Trach - Thanh Xuan - Ha Noi</td></tr>
 							<tr><td><span>email</span></td><td>dinhkhamhubt@gmail.com</td></tr>
-							<tr><td><span>điện thoại</span></td><td>0945118367</td></tr>
-							<tr><td colspan="2">Hiện tại, tôi đang học khoa CNTT tại ĐH Kinh Doanh và Công nghệ Hà Nội. Tính tình vui vẻ, hòa đồng, ham học hỏi. Sở thích đá bóng (giỏi nhất ở vị trí thủ môn), nghe nhạc. Kinh nghiệm từng học tại Zent Group từ tháng 10/2018 - 12/2018 về FrontEnd. Học HTML, CSS, Bootstrap 4 tại Vietpro Academy từ tháng 2/2019 và đang tiếp tục học Javascript, PHP-MySQL. Đọc hiểu tài liệu tiếng Anh mức cơ bản. <a target="_blank" title="Tải CV Ngay" href="https://drive.google.com/open?id=1rRKCaLmmT3ttGnv6ncHQ_cizaNC__7WU" style="color:#00f; font-size: 20px;">Tải CV ngay</a></td></tr>
+							<tr><td><span>phone number</span></td><td>0945118367</td></tr>
+							<tr><td colspan="2">Currently, I am studying at Ha Noi University of Business and Technology in IT. Cheerful, sociable, eager to learn. Interests: enjoy listening to music and sports activities, especially football. Experience of studying at Zent Group from October 2018 - 12/2018 to FrontEnd. Learn HTML, CSS, Bootstrap 4 at Vietpro Academy from 2/2019 and continue to learn Javascript, PHP-MySQL. Reading comprehension of basic English documents. <a target="_blank" title="Tải CV Ngay" href="https://drive.google.com/open?id=1rRKCaLmmT3ttGnv6ncHQ_cizaNC__7WU" style="color:#00f; font-size: 20px;">Download CV</a></td></tr>
 						</table>
 					</div>
 				</div>
@@ -59,7 +59,7 @@
 	<main class="main">
 		<section id="skill-box" class="skill-box">
 			<div class="container">
-				<h2 class="heading">Kỹ năng</h2>
+				<h2 class="heading">Skill</h2>
 				<div class="skill-inner">
 					<div class="skill-about">
 						<h4>HTML/HTML5</h4>
@@ -115,30 +115,30 @@
 		<!-- end skill-box -->
 		<section id="education-box" class="education-box">
 			<div class="container">
-				<h2 class="heading">Học vấn</h2>
+				<h2 class="heading">Education</h2>
 				<div class="education-inner">
 					<div class="education-col">
 						<div class="education-detail">
 							<span class="label-box">2012-2015</span>
-							<h5 class="education__title">Tốt nghiệp THPT Trần Quốc Tuấn (Nam Định)</h5>
+							<h5 class="education__title">Graduated from High School Tran Quoc Tuan (Nam Dinh)</h5>
 						</div>
 					</div>
 					<div class="education-col">
 						<div class="education-detail education-detail--modify">
 							<span class="label-box">2015- Now</span>
-							<h5 class="education__title">Đại học Kinh Doanh và Công nghệ Hà Nội (CNTT)</h5>
+							<h5 class="education__title">Hanoi University of Business and Technology (IT)</h5>
 						</div>
 					</div>
 					<div class="education-col">
 						<div class="education-detail">
-							<span class="label-box">T10/2018 - Now</span>
-							<h5 class="education__title">Học và làm về FrontEnd</h5>
+							<span class="label-box">June 2018 - Now</span>
+							<h5 class="education__title">Study and work in Front End</h5>
 						</div>
 					</div>
 					<div class="education-col ">
 						<div class="education-detail education-detail--modify">
-							<span class="label-box">T2/2018 - Now</span>
-							<h5 class="education__title">Học tại Vietpro Academy về Frontend và Backend</h5>
+							<span class="label-box">February 2019 - Now</span>
+							<h5 class="education__title">Study at Vietpro Academy on Frontend and Backend</h5>
 						</div>
 					</div>
 				</div>
@@ -147,41 +147,41 @@
 		<!-- end education-box -->
 		<section id="product-box" class="product-box">
 			<div class="container">
-				<h2 class="heading">Sản phẩm</h2>
+				<h2 class="heading">Project</h2>
 				<div class="product-inner">
 					<div class="product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="Project-Zent/index.html" target="_blank"><img src="images/project-zent.png" alt="Project-Zent" title="Click xem chi tiết"></a></div>
+							<div class="product__thumb"><a href="Project-Zent/index.html" target="_blank"><img src="images/project-zent.png" alt="Project-Zent" title="Click to see details"></a></div>
 							<div class="product__text">
-								<h4 class="product__name"><a href="Project-Zent/index.html" target="_blank" title="Click xem chi tiết">Project-Zent Page</a></h4>
-								<p class="product_des">Web dự án cuối khóa tại Zent Group . Sử dụng Jquery,Bootsrap 4, Fontawesome, Responsive...Hoàn thành <strong>T12/2018</strong></p>
+								<h4 class="product__name"><a href="Project-Zent/index.html" target="_blank" title="Click to see details">Project-Zent Page</a></h4>
+								<p class="product_des">The final project website interface at Zent Group . Using Bootsrap 4,jQuery, Fontawesome, Responsive...Completed <strong>December 2018</strong></p>
 							</div>
 						</div>
 					</div>
 					<div class="product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="bandienthoai/index.html" target="_blank" title="Click xem chi tiết"><img src="images/fptshop1.png" alt="Dinh Kham Shop"></a></div>
+							<div class="product__thumb"><a href="bandienthoai/index.html" target="_blank" title="Click to see details"><img src="images/fptshop1.png" alt="Dinh Kham Shop"></a></div>
 							<div class="product__text">
-								<h4 class="product__name"><a href="bandienthoai/index.html" target="_blank" title="Click xem chi tiết">FPT Shop</a></h4>
-								<p class="product_des">Web tương tự trang chủ FPT shop. Web có sử dụng Jquery, carousel, Responsive...Hoàn thành <strong>T3/2019</strong></p>
+								<h4 class="product__name"><a href="bandienthoai/index.html" target="_blank" title="Click to see details">FPT Shop</a></h4>
+								<p class="product_des">Website is similar to FPT Shop home page. Website using jQuery, Carousel, Responsive...Completed <strong>February 2019</strong></p>
 							</div>
 						</div>
 					</div>
 					<div class="product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="banhang/index.html" target="_blank" title="Click xem chi tiết"><img src="images/shopdogiadung1.png" alt="TN Edu"></a></div>
+							<div class="product__thumb"><a href="banhang/index.html" target="_blank" title="Click to see details"><img src="images/shopdogiadung1.png" alt="TN Edu"></a></div>
 							<div class="product__text">
-								<h4 class="product__name"><a href="banhang/index.html" target="_blank" title="Click xem chi tiết">Shop đồ gia dụng</a></h4>
-								<p class="product_des">Home của trang web bán đồ gia dụng. Sử dụng bootstrap 4, jquery, owl-carousel...Hoàn thành <strong>T3/2019</strong></p>
+								<h4 class="product__name"><a href="banhang/index.html" target="_blank" title="Click to see details">Shop đồ gia dụng</a></h4>
+								<p class="product_des">Home page of the website selling home appliances. Using bootstrap 4, jQuery, owl-carousel...Completed <strong>February 2019</strong></p>
 							</div>
 						</div>
 					</div>
 					<div class="product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="project/index.html" target="_blank" title="Click xem chi tiết"><img src="images/petshop.png" alt="TN Edu"></a></div>
+							<div class="product__thumb"><a href="project/index.html" target="_blank" title="Click to see details"><img src="images/petshop.png" alt="TN Edu"></a></div>
 							<div class="product__text">
-								<h4 class="product__name"><a href="project/index.html" target="_blank" title="Click xem chi tiết">Pet Shop</a></h4>
-								<p class="product_des">Giao diện trang web bán thức ăn cao cấp cho Pet. Sử dụng bootstrap 4,owl-carousel,responsive, jquery, ...Hoàn thành <strong>T3/2019</strong></p>
+								<h4 class="product__name"><a href="project/index.html" target="_blank" title="Click to see details">Pet Shop</a></h4>
+								<p class="product_des">Website interface for selling high quality food to Pet. Using bootstrap 4,owl-carousel,responsive, jQuery,....Completed <strong>March 2019</strong></p>
 							</div>
 						</div>
 					</div>
