--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 						<div class="product">
 							<div class="product__thumb"><a href="banhang/index.html" target="_blank" title="Click to see details"><img src="images/shopdogiadung1.png" alt="TN Edu"></a></div>
 							<div class="product__text">
-								<h4 class="product__name"><a href="banhang/index.html" target="_blank" title="Click to see details">Shop đồ gia dụng</a></h4>
+								<h4 class="product__name"><a href="banhang/index.html" target="_blank" title="Click to see details">Home appliances shop</a></h4>
 								<p class="product_des">Home page of the website selling home appliances. Using bootstrap 4, jQuery, owl-carousel...Completed <strong>February 2019</strong></p>
 							</div>
 						</div>
