--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<img src="images/avatar.png" alt="image">
 					</div>
 					<div class="info-box">
-						<h1 class="info-box__name"><span>I am</span> <strong>Nguyen Dinh Kham</strong><span class="hello">HELLO!</span></h1>
+						<h1 class="info-box__name"><span>My name is</span> <strong>Nguyen Dinh Kham</strong><span class="hello">HELLO!</span></h1>
 						<h4>Developer</h4>
 						<hr style="margin-top: 10px;">
 						<table class="infor-table">
