--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						</div>
 					</div>
 					<div class="skill-about">
-						<h4>Javascript/Jquery</h4>
+						<h4>Javascript/jQuery</h4>
 						<div id="process_js">
 							<div class="progress">
 								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
