--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<tr><td><span>address</span></td><td>Bui Xuong Trach - Thanh Xuan - Ha Noi</td></tr>
 							<tr><td><span>email</span></td><td>dinhkhamhubt@gmail.com</td></tr>
 							<tr><td><span>phone number</span></td><td>0945118367</td></tr>
-							<tr><td colspan="2">Currently, I am studying at Ha Noi University of Business and Technology in IT. I am a cheerful, sociable, eager for learning person. My hobbies: listening to music and sports activities, especially football. I have experience of studying at Zent Group from  10/2018 to 12/2018 to FrontEnd, learning HTML, CSS, Bootstrap 4 at Vietpro Academy from 2/2019 and continue to learn Javascript, PHP-MySQL, reading comprehension of basic English documents. <a target="_blank" title="Tải CV Ngay" href="https://drive.google.com/open?id=1rRKCaLmmT3ttGnv6ncHQ_cizaNC__7WU" style="color:#00f; font-size: 20px;">Download CV</a></td></tr>
+							<tr><td colspan="2">Currently, I am studying at Ha Noi University of Business and Technology in IT. I am a cheerful, sociable, eager for learning person. My hobbies: listening to music and sports activities, especially football. I have experience of studying at Zent Group from  10/2018 to 12/2018 to FrontEnd, learning HTML, CSS, Bootstrap 4 at Vietpro Academy from 2/2019 and continue to learn JavaScript, PHP-MySQL, reading comprehension of basic English documents. <a target="_blank" title="Tải CV Ngay" href="https://drive.google.com/open?id=1rRKCaLmmT3ttGnv6ncHQ_cizaNC__7WU" style="color:#00f; font-size: 20px;">Download CV</a></td></tr>
 						</table>
 					</div>
 				</div>
@@ -126,7 +126,7 @@
 					<div class="education-col">
 						<div class="education-detail education-detail--modify">
 							<span class="label-box">2015- Now</span>
-							<h5 class="education__title">Hanoi University of Business and Technology (IT)</h5>
+							<h5 class="education__title">Study Hanoi University of Business and Technology (IT)</h5>
 						</div>
 					</div>
 					<div class="education-col">
@@ -163,7 +163,7 @@
 							<div class="product__thumb"><a href="bandienthoai/index.html" target="_blank" title="Click to see details"><img src="images/fptshop1.png" alt="Dinh Kham Shop"></a></div>
 							<div class="product__text">
 								<h4 class="product__name"><a href="bandienthoai/index.html" target="_blank" title="Click to see details">FPT Shop</a></h4>
-								<p class="product_des">Website is similar to FPT Shop home page. Website using jQuery, Carousel, Responsive...Completed <strong>February 2019</strong></p>
+								<p class="product_des">Website is similar to FPT Shop home page. Using jQuery, Carousel, Responsive...Completed <strong>February 2019</strong></p>
 							</div>
 						</div>
 					</div>
