--- a/index.html
+++ b/index.html
@@ -33,11 +33,25 @@
 						<h4>Developer</h4>
 						<hr style="margin-top: 10px;">
 						<table class="infor-table">
-							<tr><td><span>Age</span></td><td>22</td></tr>
-							<tr><td><span>address</span></td><td>Bui Xuong Trach - Thanh Xuan - Ha Noi</td></tr>
-							<tr><td><span>email</span></td><td>dinhkhamhubt@gmail.com</td></tr>
-							<tr><td><span>phone number</span></td><td>0945118367</td></tr>
-							<tr><td colspan="2">Currently, I am studying at Ha Noi University of Business and Technology in IT. I am a cheerful, sociable, eager for learning person. My hobbies: listening to music and sports activities, especially football. I have experience of studying at Zent Group from  10/2018 to 12/2018 to FrontEnd, learning HTML, CSS, Bootstrap 4, JavaScript at Vietpro Academy from 2/2019 and continue to learn PHP-MySQL, reading comprehension of basic English documents. <a target="_blank" title="Dowload CV now" href="https://drive.google.com/open?id=18ool5zU6ZznlWx1bqCsrc80L3PAMaTJk" style="color:#00f; font-size: 20px;">Download CV</a></td></tr>
+							<tr>
+								<td><span>Age</span></td>
+								<td>22</td>
+							</tr>
+							<tr>
+								<td><span>address</span></td>
+								<td>Bui Xuong Trach - Thanh Xuan - Ha Noi</td>
+							</tr>
+							<tr>
+								<td><span>email</span></td>
+								<td>dinhkhamhubt@gmail.com</td>
+							</tr>
+							<tr>
+								<td><span>phone number</span>
+								</td><td>0945118367</td>
+							</tr>
+							<tr>
+								<td colspan="2">Currently, I am studying at Ha Noi University of Business and Technology in IT. I am a cheerful, sociable, eager for learning person. My hobbies: listening to music and sports activities, especially football. I have experience of studying at Zent Group from  10/2018 to 12/2018 to FrontEnd, learning HTML, CSS, Bootstrap 4, JavaScript at Vietpro Academy from 2/2019 and continue to learn PHP-MySQL, reading comprehension of basic English documents. <a target="_blank" title="Dowload CV now" href="https://drive.google.com/open?id=18ool5zU6ZznlWx1bqCsrc80L3PAMaTJk" style="color:#00f; font-size: 20px;">Download CV</a></td>
+							</tr>
 						</table>
 					</div>
 				</div>
