--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<div class="product-inner">
 					<div class="product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="Project-Zent/index.html" target="_blank"><img src="images/project-zent.png" alt="Project-Zent" title="Click to see details"></a></div>
+							<div class="product__thumb"><a href="Project-Zent/index.html" target="_blank"><img src="images/2019-04-11-09-58-tungxdnd.github.io.png" alt="Project-Zent" title="Click to see details"></a></div>
 							<div class="product__text">
 								<h4 class="product__name"><a href="Project-Zent/index.html" target="_blank" title="Click to see details">Project-Zent Page</a></h4>
 								<p class="product_des">The final project website interface at Zent Group . Using Bootsrap 4,jQuery, Fontawesome, Responsive...Completed <strong>December 2018</strong></p>
@@ -174,7 +174,7 @@
 					</div>
 					<div class="product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="bandienthoai/index.html" target="_blank" title="Click to see details"><img src="images/fptshop1.png" alt="Dinh Kham Shop"></a></div>
+							<div class="product__thumb"><a href="bandienthoai/index.html" target="_blank" title="Click to see details"><img class="img-fptshop" src="images/fptshop1.png" alt="Dinh Kham Shop"></a></div>
 							<div class="product__text">
 								<h4 class="product__name"><a href="bandienthoai/index.html" target="_blank" title="Click to see details">FPT Shop</a></h4>
 								<p class="product_des">Website is similar to FPT Shop home page. Using jQuery, Carousel, Responsive...Completed <strong>February 2019</strong></p>
@@ -218,5 +218,12 @@
 	<script src="libs/jquery-2.2.4.js"></script>
 	<script src="libs/jquery.lineProgressbar.js"></script>
 	<script src="script.js"></script>
+	<script>
+		jQuery(document).ready(function(r){r(".product").hover(function(){
+			$heightImg=r(this).find(".product__thumb img").height();
+			$heightThumb=r(this).find(".product__thumb").height();
+			$indexStop=$heightThumb-$heightImg,r(this).find(".product__thumb img").css("transform","translateY("+$indexStop+"px)")},function(){
+				r(this).find(".product__thumb img").css("transform","translateY(0)")})});
+	</script>
 </body>
 </html>
