--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<h4>HTML/HTML5</h4>
 						<div id="process_html">
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
+								<div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
 							</div>
 						</div>
 					</div>
@@ -87,7 +87,7 @@
 						<h4>CSS/CSS3</h4>
 						<div id="process_css">
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
+								<div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
 							</div>
 						</div>
 					</div>
@@ -95,7 +95,7 @@
 						<h4>Javascript/jQuery</h4>
 						<div id="process_js">
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
+								<div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
 							</div>
 						</div>
 					</div>
@@ -103,7 +103,7 @@
 						<h4>PHP & MySQL</h4>
 						<div id="process_php">
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" style="width: 15%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">15%</div>
+								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">15%</div>
 							</div>
 						</div>
 					</div>
@@ -111,7 +111,7 @@
 						<h4>Photoshop</h4>
 						<div id="process_pts">
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
+								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
 							</div>
 						</div>
 					</div>
@@ -119,7 +119,7 @@
 						<h4>Search Google</h4>
 						<div id="process_gg">
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
+								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
 							</div>
 						</div>
 					</div>
@@ -139,7 +139,7 @@
 					</div>
 					<div class="education-col">
 						<div class="education-detail education-detail--modify">
-							<span class="label-box">2015- Now</span>
+							<span class="label-box">2015- 2019</span>
 							<h5 class="education__title">Study Hanoi University of Business and Technology (IT)</h5>
 						</div>
 					</div>
@@ -162,43 +162,62 @@
 		<section id="product-box" class="product-box">
 			<div class="container">
 				<h2 class="heading">Project</h2>
-				<div class="product-inner">
-					<div class="product-col">
+				<div class="row product-inner">
+					<div class="col-12 col-md-6 col-lg-4 product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="Project-Zent/index.html" target="_blank"><img src="images/2019-04-11-09-58-tungxdnd.github.io.png" alt="Project-Zent" title="Click to see details"></a></div>
+							<div class="product__thumb"><a href="Project-Zent/index.html" target="_blank"><img src="images/zent.png" alt="Project-Zent" title="Click to see details"></a></div>
 							<div class="product__text">
 								<h4 class="product__name"><a href="Project-Zent/index.html" target="_blank" title="Click to see details">Project-Zent Page</a></h4>
 								<p class="product_des">The final project website interface at Zent Group . Using Bootsrap 4,jQuery, Fontawesome, Responsive...Completed <strong>December 2018</strong></p>
 							</div>
 						</div>
 					</div>
-					<div class="product-col">
+					<div class="col-12 col-md-6 col-lg-4 product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="bandienthoai/index.html" target="_blank" title="Click to see details"><img class="img-fptshop" src="images/fptshop1.png" alt="Dinh Kham Shop"></a></div>
+							<div class="product__thumb"><a href="project/index.html" target="_blank" title="Click to see details"><img src="images/petshop.png" alt="TN Edu"></a></div>
+							<div class="product__text">
+								<h4 class="product__name"><a href="project/index.html" target="_blank" title="Click to see details">Pet Shop</a></h4>
+								<p class="product_des">Website interface for selling high quality food to Pet. Using bootstrap 4,owl-carousel,responsive, jQuery,....Completed <strong>January 2019</strong></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 product-col">
+						<div class="product">
+							<div class="product__thumb"><a href="bandienthoai/index.html" target="_blank" title="Click to see details"><img src="images/fptshop1.png" alt="Dinh Kham Shop"></a></div>
 							<div class="product__text">
 								<h4 class="product__name"><a href="bandienthoai/index.html" target="_blank" title="Click to see details">FPT Shop</a></h4>
 								<p class="product_des">Website is similar to FPT Shop home page. Using jQuery, Carousel, Responsive...Completed <strong>February 2019</strong></p>
 							</div>
 						</div>
 					</div>
-					<div class="product-col">
+					<div class="col-12 col-md-6 col-lg-4 product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="banhang/index.html" target="_blank" title="Click to see details"><img src="images/shopdogiadung1.png" alt="TN Edu"></a></div>
+							<div class="product__thumb"><a href="http://batdongsannew.com.vn/" target="_blank" title="Click to see details"><img src="images/Meeg.png" alt="TN Edu"></a></div>
 							<div class="product__text">
-								<h4 class="product__name"><a href="banhang/index.html" target="_blank" title="Click to see details">Home appliances shop</a></h4>
-								<p class="product_des">Home page of the website selling home appliances. Using bootstrap 4, jQuery, owl-carousel...Completed <strong>February 2019</strong></p>
+								<h4 class="product__name"><a href="project/index.html" target="_blank" title="Click to see details">Meeg</a></h4>
+								<p class="product_des">News website about kitchens equipment and online sales. Using bootstrap, responsive,  jQuery, Ajax, PHP, Laravel....Completed <strong>May 2019</strong></p>
 							</div>
 						</div>
 					</div>
-					<div class="product-col">
+					<div class="col-12 col-md-6 col-lg-4 product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="project/index.html" target="_blank" title="Click to see details"><img src="images/petshop.png" alt="TN Edu"></a></div>
+							<div class="product__thumb"><a href="https://hongtoan.vn/" target="_blank" title="Click to see details"><img src="images/hongtoan.png" alt="TN Edu"></a></div>
 							<div class="product__text">
-								<h4 class="product__name"><a href="project/index.html" target="_blank" title="Click to see details">Pet Shop</a></h4>
-								<p class="product_des">Website interface for selling high quality food to Pet. Using bootstrap 4,owl-carousel,responsive, jQuery,....Completed <strong>March 2019</strong></p>
+								<h4 class="product__name"><a href="project/index.html" target="_blank" title="Click to see details">HongToAn</a></h4>
+								<p class="product_des">News website and sale of pharmaceuticals. Using bootstrap 4, responsive, jQuery, PHP ,Laravel.... Completed <strong>June 2019</strong></p>
 							</div>
 						</div>
 					</div>
+					<div class="col-12 col-md-6 col-lg-4 product-col">
+						<div class="product">
+							<div class="product__thumb"><a href="http://batdongsannew.com.vn/" target="_blank" title="Click to see details"><img src="images/batdongsannew.png" alt="TN Edu"></a></div>
+							<div class="product__text">
+								<h4 class="product__name"><a href="project/index.html" target="_blank" title="Click to see details">Batdongsannew</a></h4>
+								<p class="product_des">Real estate news website for rent and sale. Using bootstrap, responsive,  jQuery, Ajax, PHP, Laravel....Completed <strong>June 2019</strong></p>
+							</div>
+						</div>
+					</div>
+					
 					
 				</div>
 			</div>
