--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<h4>HTML/HTML5</h4>
 						<div id="process_html">
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
+								<div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">90%</div>
 							</div>
 						</div>
 					</div>
@@ -87,7 +87,7 @@
 						<h4>CSS/CSS3</h4>
 						<div id="process_css">
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
+								<div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">90%</div>
 							</div>
 						</div>
 					</div>
@@ -95,7 +95,7 @@
 						<h4>Javascript/jQuery</h4>
 						<div id="process_js">
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
+								<div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">60%</div>
 							</div>
 						</div>
 					</div>
@@ -103,7 +103,7 @@
 						<h4>PHP & MySQL</h4>
 						<div id="process_php">
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">15%</div>
+								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
 							</div>
 						</div>
 					</div>
@@ -111,7 +111,7 @@
 						<h4>Photoshop</h4>
 						<div id="process_pts">
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
+								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
 							</div>
 						</div>
 					</div>
@@ -119,7 +119,7 @@
 						<h4>Search Google</h4>
 						<div id="process_gg">
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
+								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
 							</div>
 						</div>
 					</div>
@@ -145,14 +145,20 @@
 					</div>
 					<div class="education-col">
 						<div class="education-detail">
-							<span class="label-box">June 2018 - Now</span>
-							<h5 class="education__title">Study and work in Front End</h5>
+							<span class="label-box">June 2018 - July 2019</span>
+							<h5 class="education__title">Study and work in Front End & PHP</h5>
 						</div>
 					</div>
 					<div class="education-col ">
 						<div class="education-detail education-detail--modify">
 							<span class="label-box">February 2019 - Now</span>
-							<h5 class="education__title">Study at Vietpro Academy on Frontend and Backend</h5>
+							<h5 class="education__title">Study at Vietpro Academy on Frontend and Backend (VueJs, PHP, Laravel)</h5>
+						</div>
+					</div>
+					<div class="education-col ">
+						<div class="education-detail education-detail--modify">
+							<span class="label-box">April 2019 - July 2019 </span>
+							<h5 class="education__title">Work at Hobasoft</h5>
 						</div>
 					</div>
 				</div>
