--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								</td><td>0945118367</td>
 							</tr>
 							<tr>
-								<td colspan="2">Currently, I am studying at Ha Noi University of Business and Technology in IT. I am a cheerful, sociable, eager for learning person. My hobbies: listening to music and sports activities, especially football. I have experience of studying at Zent Group from  10/2018 to 12/2018 to FrontEnd, learning HTML, CSS, Bootstrap 4, JavaScript at Vietpro Academy from 2/2019 and continue to learn PHP-MySQL, reading comprehension of basic English documents. <a target="_blank" title="Dowload CV now" href="https://drive.google.com/open?id=1w3P2tAsHqbqNVbNDclTKHe_vCNBfw7M2" style="color:#00f; font-size: 20px;">Download CV</a></td>
+								<td colspan="2">Currently, I am studying at Ha Noi University of Business and Technology in IT. I am a cheerful, sociable, eager for learning person. My hobbies: listening to music and sports activities, especially football. I have experience of studying at Zent Group from  10/2018 to 12/2018 to FrontEnd, learning HTML, CSS, Bootstrap 4, JavaScript at Vietpro Academy from 2/2019, work at Hobasoft from 4/2019 to 7/2019 and continue to learn PHP, reading comprehension of basic English documents. <a target="_blank" title="Dowload CV now" href="https://drive.google.com/open?id=1w3P2tAsHqbqNVbNDclTKHe_vCNBfw7M2" style="color:#00f; font-size: 20px;">Download CV</a></td>
 							</tr>
 						</table>
 					</div>
@@ -145,8 +145,8 @@
 					</div>
 					<div class="education-col">
 						<div class="education-detail">
-							<span class="label-box">June 2018 - July 2019</span>
-							<h5 class="education__title">Study and work in Front End & PHP</h5>
+							<span class="label-box">June 2018 - Now</span>
+							<h5 class="education__title">Study and work in FrontEnd & PHP  </h5>
 						</div>
 					</div>
 					<div class="education-col ">
@@ -156,7 +156,7 @@
 						</div>
 					</div>
 					<div class="education-col ">
-						<div class="education-detail education-detail--modify">
+						<div class="education-detail">
 							<span class="label-box">April 2019 - July 2019 </span>
 							<h5 class="education__title">Work at Hobasoft</h5>
 						</div>
@@ -198,9 +198,9 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 product-col">
 						<div class="product">
-							<div class="product__thumb"><a href="http://batdongsannew.com.vn/" target="_blank" title="Click to see details"><img src="images/Meeg.png" alt="TN Edu"></a></div>
+							<div class="product__thumb"><a href="http://meeg.com.vn/" target="_blank" title="Click to see details"><img src="images/Meeg.png" alt="TN Edu"></a></div>
 							<div class="product__text">
-								<h4 class="product__name"><a href="project/index.html" target="_blank" title="Click to see details">Meeg</a></h4>
+								<h4 class="product__name"><a href="http://meeg.com.vn/" target="_blank" title="Click to see details">Meeg</a></h4>
 								<p class="product_des">News website about kitchens equipment and online sales. Using bootstrap, responsive,  jQuery, Ajax, PHP, Laravel....Completed <strong>May 2019</strong></p>
 							</div>
 						</div>
@@ -209,7 +209,7 @@
 						<div class="product">
 							<div class="product__thumb"><a href="https://hongtoan.vn/" target="_blank" title="Click to see details"><img src="images/hongtoan.png" alt="TN Edu"></a></div>
 							<div class="product__text">
-								<h4 class="product__name"><a href="project/index.html" target="_blank" title="Click to see details">HongToAn</a></h4>
+								<h4 class="product__name"><a href="https://hongtoan.vn/" target="_blank" title="Click to see details">HongToAn</a></h4>
 								<p class="product_des">News website and sale of pharmaceuticals. Using bootstrap 4, responsive, jQuery, PHP ,Laravel.... Completed <strong>June 2019</strong></p>
 							</div>
 						</div>
@@ -218,7 +218,7 @@
 						<div class="product">
 							<div class="product__thumb"><a href="http://batdongsannew.com.vn/" target="_blank" title="Click to see details"><img src="images/batdongsannew.png" alt="TN Edu"></a></div>
 							<div class="product__text">
-								<h4 class="product__name"><a href="project/index.html" target="_blank" title="Click to see details">Batdongsannew</a></h4>
+								<h4 class="product__name"><a href="http://batdongsannew.com.vn/" target="_blank" title="Click to see details">Batdongsannew</a></h4>
 								<p class="product_des">Real estate news website for rent and sale. Using bootstrap, responsive,  jQuery, Ajax, PHP, Laravel....Completed <strong>June 2019</strong></p>
 							</div>
 						</div>
