--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 								</td><td>0945118367</td>
 							</tr>
 							<tr>
-								<td colspan="2">Currently, I am studying at Ha Noi University of Business and Technology in IT. I am a cheerful, sociable, eager for learning person. My hobbies: listening to music and sports activities, especially football. I have experience of studying at Zent Group from  10/2018 to 12/2018 to FrontEnd, learning HTML, CSS, Bootstrap 4, JavaScript at Vietpro Academy from 2/2019, work at Hobasoft from 4/2019 to 7/2019 and continue to learn PHP, reading comprehension of basic English documents. <a target="_blank" title="Dowload CV now" href="https://drive.google.com/open?id=1w3P2tAsHqbqNVbNDclTKHe_vCNBfw7M2" style="color:#00f; font-size: 20px;">Download CV</a></td>
+								<td colspan="2">Currently, I am studying at Ha Noi University of Business and Technology in IT. I am a cheerful, sociable, eager for learning person. My hobbies: listening to music and sports activities, especially football. I have experience of studying at Zent Group from  10/2018 to 12/2018 to FrontEnd, learning HTML, CSS, Bootstrap 4, JavaScript at Vietpro Academy from 2/2019, work at Hobasoft from 4/2019 to 7/2019 and continue to learn PHP, reading comprehension of basic English documents. <a target="_blank" title="Dowload CV now" 
+									href="https://drive.google.com/open?id=15pZR3dR0sLahvABr3xson_xAsxRxFA3i" style="color:#00f; font-size: 20px;">Download CV</a></td>
 							</tr>
 						</table>
 					</div>
@@ -157,7 +158,7 @@
 					</div>
 					<div class="education-col ">
 						<div class="education-detail">
-							<span class="label-box">April 2019 - July 2019 </span>
+							<span class="label-box">March 2019 - July 2019 </span>
 							<h5 class="education__title">Work at Hobasoft</h5>
 						</div>
 					</div>
