--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					</div>
 					<div class="info-box">
 						<h1 class="info-box__name"><span>My name is</span> <strong>Nguyen Dinh Kham</strong><span class="hello">HELLO!</span></h1>
-						<h4>Developer</h4>
+						<h4>Coder</h4>
 						<hr style="margin-top: 10px;">
 						<table class="infor-table">
 							<tr>
