--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
 							</div>
 						</div>
 					</div>
+					<div class="skill-about">
+						<h4>VueJs</h4>
+						<div id="process_gg">
+							<div class="progress">
+								<div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">30%</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
