--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 								</td><td>0945118367</td>
 							</tr>
 							<tr>
-								<td colspan="2">Currently, I am studying at Ha Noi University of Business and Technology in IT. I am a cheerful, sociable, eager for learning person. My hobbies: listening to music and sports activities, especially football. I have experience of studying at Zent Group from  10/2018 to 12/2018 to FrontEnd, learning HTML, CSS, Bootstrap 4, JavaScript at Vietpro Academy from 2/2019, work at Hobasoft from 4/2019 to 7/2019 and continue to learn PHP, reading comprehension of basic English documents. <a target="_blank" title="Dowload CV now" 
-									href="https://drive.google.com/open?id=15pZR3dR0sLahvABr3xson_xAsxRxFA3i" style="color:#00f; font-size: 20px;">Download CV</a></td>
+								<td colspan="2">Currently, I am studying at Ha Noi University of Business and Technology in IT. I am a cheerful, sociable, eager for learning person. My hobbies: listening to music and sports activities, especially football. I have experience of studying at Zent Group from  10/2018 to 12/2018 to FrontEnd, learning HTML, CSS, Bootstrap, JavaScript at Vietpro Academy from 2/2019, work at Hobasoft from 3/2019 to 7/2019 and continue to learn PHP, reading comprehension of basic English documents. <a target="_blank" title="Dowload CV now" 
+									href="https://drive.google.com/open?id=141aYHUHuA-0B65qvkcXk9t-zJPHolMYL" style="color:#00f; font-size: 20px;">Download CV</a></td>
 							</tr>
 						</table>
 					</div>
